[project]
name = "monadcontainers"
version = "0.1.0"
description = "Python monads for functional programing"

dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.18.1",
    "hatch>=1.9.1",
    "keyring>=24.3.0",
    "pytest>=7.4.4",
    "mypy>=1.8.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "twine>=4.0.2",
    "coverage>=7.4.0",
    "pdoc>=14.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
