[project]
name = "ufo_tools"
version = "0.2.0"
description = "Python monads for functional programing"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/benrutter/monads"
Documentation = "https://benrutter.github.io/monads/monadcontainers.html"
Homepage = "https://benrutter.github.io/monads/monadcontainers.html"
Issues = "https://github.com/benrutter/monads/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.18.1",
    "hatch>=1.9.1",
    "keyring>=24.3.0",
    "pytest>=7.4.4",
    "mypy>=1.8.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "twine>=4.0.2",
    "coverage>=7.4.0",
    "pdoc>=14.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ufo"]
